# stellar-app-os

./: .env.example  .gitignore  COMMIT_MESSAGE.md  CONTRACTS.md  CONTRIBUTING.md  FILE_STRUCTURE.md  FINAL_DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_VISUAL_SUMMARY.md  PRIVACY_IMPLEMENTATION_README.md  PR_DEPLOY_CONTRACTS.md  PR_DESCRIPTION.md  PR_NULLIFIER_REGISTRY.md  QUICK_START_GUIDE.md  STORAGE_OPTIMIZATION_ANALYSIS.md  TESTING_AND_DEPLOYMENT_GUIDE.md  TREE_ASSET.md  VERIFICATION_CHECKLIST.md  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  (+2 more)
contracts/: Cargo.toml
contracts/donation-escrow/: Cargo.toml
contracts/donation-escrow/src/: lib.rs
contracts/donation-escrow/test_snapshots/tests/: test_batch_ids_increment.1.json  test_donate_locks_funds_and_returns_batch_id.1.json  test_double_refund_rejected.1.json  test_refund_batch_returns_to_donor.1.json  test_release_after_refund_rejected.1.json  (+3 more)
contracts/escrow-milestone/: Cargo.toml
contracts/escrow-milestone/src/: lib.rs
contracts/farmer-registry/: Cargo.toml
contracts/farmer-registry/src/: lib.rs
contracts/location-proof/: Cargo.toml
contracts/location-proof/src/: lib.rs
contracts/naira-payout/: Cargo.toml
contracts/naira-payout/src/: lib.rs
contracts/nullifier-registry/: Cargo.toml
contracts/nullifier-registry/src/: lib.rs
contracts/tree-escrow/: Cargo.toml
contracts/tree-escrow/src/: lib.rs
contracts/zk-location-verifier/: Cargo.toml
contracts/zk-location-verifier/src/: lib.rs
(+161 files in other folders)
